--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <html>
-
-
-
-
-
-
-
-</html>
+  <body> 
+      <nav>
+        <li><a href="index.html"> HOME </a </li>
+          <li><a href="TITLE.html"> APPS </a></li>
+          <li><a href="https://studio.code.org/projects"> CODE </a></li>
+          </nav>
+          
+    <center>
+    <h2> Jackie's Website </h2>
+    <img src=https://images.photowall.com/products/71332/dandelion-flower.jpg?h=699&q=85" >
+ <iframe width="382" height="432" style="border: 0px;" 
+               
+                         src="https://studio.code.org/projects/applab/mqS9C97bd1hpFqXSaFtiFImnj7j-oxTawe2advl7iMw/embed"></iframe>   
+<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/KYLctrRUOdlqGeqpQ9gRGkwnGS-gk61orAydseGMBfY/embed"></iframe>                                                                                                               
+        </body>
+      </html>
+  
