--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <body> 
       <nav>
         <li><a href="index.html"> HOME </a </li>
-          <li><a href="TITLE.html"> APPS </a></li>
+          <li><a href="SECONDPG.html"> APPS </a></li>
           <li><a href="https://studio.code.org/projects"> CODE </a></li>
           </nav>
           
