--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <html>
-  <body> 
+  <head> <link rel="stylesheet" href="style.css">
+    <body>
       <nav>
-        <li><a href="index.html"> HOME </a </li>
-          <li><a href="SECONDPG.html"> APPS </a></li>
-          <li><a href="https://studio.code.org/projects"> CODE </a></li>
-          </nav>
-          
-    <center>
-      <h2> Jackie's Website </h2>
-      <img src=https://images.photowall.com/products/71332/dandelion-flower.jpg?h=699&q=85"> 
-                                                                                           <iframe width="382" height="432" style="border: 0px;" 
-                                        <iframe width="392" height="620" style="border: 0px;" 
-               
-          src="https://studio.code.org/projects/applab/mqS9C97bd1hpFqXSaFtiFImnj7j-oxTawe2advl7iMw/embed"></iframe>   
-<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/KYLctrRUOdlqGeqpQ9gRGkwnGS-gk61orAydseGMBfY/embed"></iframe>                                                                                                               
-        </body>
-      </html>
-  
+        <li><a href="apps.html"> MY APPS </a></li>
+        <li><a href="index.html"> HOME </a></li>
+      </nav>
+      <center>
+        <h2> Jackie's Website </h2>
+        src= "<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/EC8_M54EMnqlMVEudWwX9RsJTphbjA9QThOBRRaltAM/embed"></iframe>"
+        src= "<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/2ZtK6OwYoBprlhA2cLBXmzr4LcmNy7LFQv3Kh0Kh_Ik/embed"></iframe>"
+        src= "<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/jjncn1fDMRt06ygVyjZKWZ-qRo3MtN6n_QSJ5vLOke0/embed"></iframe>"
+        src= "<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/r5LfxW2lC0MSFN99m6a1NL5SImUKmgG2RO5btVxSid4/embed"></iframe>"
+    </body>
+  </head>
+</html>
+ 
