--- a/apps.html
+++ b/apps.html
@@ -1,10 +1,10 @@
  <html>
   <head> <link rel="stylesheet" href="style.css">
     <body>
-        src= "<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/EC8_M54EMnqlMVEudWwX9RsJTphbjA9QThOBRRaltAM/embed"></iframe>"
-        src= "<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/2ZtK6OwYoBprlhA2cLBXmzr4LcmNy7LFQv3Kh0Kh_Ik/embed"></iframe>"
-        src= "<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/jjncn1fDMRt06ygVyjZKWZ-qRo3MtN6n_QSJ5vLOke0/embed"></iframe>"
-        src= "<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/r5LfxW2lC0MSFN99m6a1NL5SImUKmgG2RO5btVxSid4/embed"></iframe>"
+        <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/EC8_M54EMnqlMVEudWwX9RsJTphbjA9QThOBRRaltAM/embed"></iframe>
+        <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/2ZtK6OwYoBprlhA2cLBXmzr4LcmNy7LFQv3Kh0Kh_Ik/embed"></iframe>
+        <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/jjncn1fDMRt06ygVyjZKWZ-qRo3MtN6n_QSJ5vLOke0/embed"></iframe>
+        <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/r5LfxW2lC0MSFN99m6a1NL5SImUKmgG2RO5btVxSid4/embed"></iframe>
      <nav>
       <li><a href="apps.html"> MY APPS </a></li>
       <li><a href="index.html"> HOME </a></li>
