update last app

--- a/apps.html
+++ b/apps.html
@@ -8,7 +8,7 @@
         <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/EC8_M54EMnqlMVEudWwX9RsJTphbjA9QThOBRRaltAM/embed"></iframe>
         <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/2ZtK6OwYoBprlhA2cLBXmzr4LcmNy7LFQv3Kh0Kh_Ik/embed"></iframe>
         <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/jjncn1fDMRt06ygVyjZKWZ-qRo3MtN6n_QSJ5vLOke0/embed"></iframe>
-        <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/r5LfxW2lC0MSFN99m6a1NL5SImUKmgG2RO5btVxSid4/embed"></iframe>
+        <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/6j02mUEmK5GdKumm9Nnf7MVpNQlJ0oiWBqdR_uhoR_9/embed?nosource"></iframe>
     </body>
   </head>
 </html>
