--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       </nav>
       <center>
         <h2> Jackie's Website </h2>
+        src=https://images.photowall.com/products/71332/dandelion-flower.jpg?h=699&q=85" >
         </body>
       </head>
     </html>
