--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h2> Jackie's Website </h2>
         <img 
              src=https://images.photowall.com/products/71332/dandelion-flower.jpg?h=699&q=85" >
+             width: 30%                                                                                
         </body>
       </head>
     </html>
