--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
-<html>
-  <head> <link rel="stylesheet" href="style.css">
+<html> 
+    <head> <link rel="stylesheet" href="style.css">
+     <body>
       <nav>
         <li><a href="index.html"> HOME </a></li>
         <li><a href="apps.html"> MY APPS </a></li>
       </nav>
-      <center>
-        <h2> Jackie's Website </h2>
-        <body>
-        <img 
-             src=https://images.photowall.com/products/71332/dandelion-flower.jpg?h=699&q=85" >                                                                               
-        </body>
-      </head>
-    </html>
- 
+       <center>
+   <h2> Jackie's Website </h2>
+  <img 
+src=https://images.photowall.com/products/71332/dandelion-flower.jpg?h=699&q=85" >
+<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/mqS9C97bd1hpFqXSaFtiFImnj7j-oxTawe2advl7iMw/embed"></iframe>                                                         </body>
+</html>
