--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <html> 
-    <head> <link rel="stylesheet" href="style.css">
-         <h2> Jackie's Website </h2>
+  <head> <link rel="stylesheet" href="style.css">
+    <h2> Jackie's Website </h2>
      <body>
       <nav>
         <li><a href="index.html"> HOME </a></li>
         <li><a href="apps.html"> MY APPS </a></li>
       </nav>
-       <center>
   <img 
 src=https://images.photowall.com/products/71332/dandelion-flower.jpg?h=699&q=85" >
-<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/mqS9C97bd1hpFqXSaFtiFImnj7j-oxTawe2advl7iMw/embed"></iframe>                                                         </body>
+  </body>
 </html>
