--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html> 
   <head> <link rel="stylesheet" href="style.css">
-    <h2> Jackie's Website </h2>
      <body>
       <nav>
         <li><a href="index.html"> HOME </a></li>
         <li><a href="apps.html"> MY APPS </a></li>
       </nav>
+       <center>
+        <h2> Jackie's Website </h2>
   <img 
 src=https://images.photowall.com/products/71332/dandelion-flower.jpg?h=699&q=85" >
   </body>
