--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html> 
   <head> <link rel="stylesheet" href="style.css">
+    <title>Jackie's Website</title>
      <body>
       <nav>
         <li><a href="index.html"> HOME </a></li>
