--- a/apps.html
+++ b/apps.html
@@ -10,6 +10,7 @@
      <br>
      <br>
      <br>
+     <center>
         <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/EC8_M54EMnqlMVEudWwX9RsJTphbjA9QThOBRRaltAM/embed"></iframe>
         <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/2ZtK6OwYoBprlhA2cLBXmzr4LcmNy7LFQv3Kh0Kh_Ik/embed"></iframe>
         <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/jjncn1fDMRt06ygVyjZKWZ-qRo3MtN6n_QSJ5vLOke0/embed"></iframe>
